site/docs/v0.4.0/en/components/ribbon.mdx
# Ribbon

A Ribbon combines tab navigation with grouped application commands. The pattern is extracted from A3S Office and generalized for editors, topology tools, and operational workbenches.

<Preview>
  <div class="w-full overflow-hidden border border-border bg-[var(--a3s-bg)]">
    <div class="ribbon tabs w-full" data-accent="blue">
    <div role="tablist" aria-label="Document commands">
      <button
        type="button"
        role="tab"
        id="ribbon-home-tab"
        aria-selected="true"
        aria-controls="ribbon-home"
      >
        Home
      </button>
      <button
        type="button"
        role="tab"
        id="ribbon-insert-tab"
        aria-selected="false"
        aria-controls="ribbon-insert"
        tabindex="-1"
      >
        Insert
      </button>
      <button
        type="button"
        role="tab"
        id="ribbon-review-tab"
        aria-selected="false"
        aria-controls="ribbon-review"
        tabindex="-1"
      >
        Review
      </button>
    </div>
    <div role="tabpanel" id="ribbon-home" aria-labelledby="ribbon-home-tab">
      <fieldset data-ribbon-group>
        <legend>Clipboard</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Paste"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <rect x="5" y="4" width="14" height="17" rx="2" />
              <path d="M9 4V2h6v2M8 12h8M12 8v8" />
            </svg>
          </button>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Copy"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <rect x="8" y="8" width="11" height="11" rx="2" />
              <path d="M16 8V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h3" />
            </svg>
          </button>
        </div>
      </fieldset>
      <fieldset data-ribbon-group>
        <legend>Font</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn font-bold"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Bold"
          >
            B
          </button>
          <button
            type="button"
            class="btn italic"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Italic"
          >
            I
          </button>
          <button
            type="button"
            class="btn underline"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Underline"
          >
            U
          </button>
        </div>
      </fieldset>
      <fieldset data-ribbon-group>
        <legend>Paragraph</legend>
        <div data-ribbon-controls>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Align left"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path d="M4 6h16M4 10h10M4 14h16M4 18h10" />
            </svg>
          </button>
          <button
            type="button"
            class="btn"
            data-size="icon-sm"
            data-variant="ghost"
            aria-label="Bulleted list"
          >
            <svg
              aria-hidden="true"
              width="16"
              height="16"
              viewBox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="1.8"
              stroke-linecap="round"
              stroke-linejoin="round"
            >
              <path d="M9 6h11M9 12h11M9 18h11" />
              <circle cx="4" cy="6" r="1" />
              <circle cx="4" cy="12" r="1" />
              <circle cx="4" cy="18" r="1" />
            </svg>
          </button>
        </div>
      </fieldset>
    </div>
    <div
      role="tabpanel"
      id="ribbon-insert"
      aria-labelledby="ribbon-insert-tab"
      hidden
    >
      <fieldset data-ribbon-group>
        <legend>Content</legend>
        <div data-ribbon-controls>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            Table
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            Image
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            Link
          </button>
        </div>
      </fieldset>
    </div>
    <div
      role="tabpanel"
      id="ribbon-review"
      aria-labelledby="ribbon-review-tab"
      hidden
    >
      <fieldset data-ribbon-group>
        <legend>Review</legend>
        <div data-ribbon-controls>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            Comment
          </button>
          <button type="button" class="btn" data-size="sm" data-variant="ghost">
            Track changes
          </button>
        </div>
      </fieldset>
    </div>
    </div>
    <div
      class="grid min-h-40 place-items-center text-sm text-muted-foreground"
      data-editor-canvas
    >
      Document canvas
    </div>
  </div>
</Preview>

## Usage

Load the Tabs controller and combine `ribbon` with `tabs`.

```html
<div class="ribbon tabs" data-accent="blue">
  <div role="tablist" aria-label="Editor commands">...</div>
  <div role="tabpanel">
    <fieldset data-ribbon-group>
      <legend>Clipboard</legend>
      ...
    </fieldset>
  </div>
</div>
```

### Parameters

| Parameter                           | Values                              | Default     | Purpose                                |
| ----------------------------------- | ----------------------------------- | ----------- | -------------------------------------- |
| `data-accent`                       | `blue`, `green`, `orange`, `purple` | `blue`      | Legacy product accent; `purple` resolves to A3S blue      |
| `role="tablist"`                    | —                                   | Required    | Tab navigation container               |
| `aria-selected`                     | `true`, `false`                     | Required    | Active tab state                       |
| `aria-controls` / `aria-labelledby` | Element IDs                         | Required    | Associates tabs and panels             |
| `data-ribbon-group`                 | —                                   | Required    | Command group layout                   |
| `data-ribbon-controls`              | —                                   | Recommended | Aligns commands above the group legend |
| `--ribbon-tabs-height`              | CSS length                          | `2.25rem`   | Fixed tab-strip height                  |
| `--ribbon-panel-height`             | CSS length                          | `4.625rem`  | Fixed command-panel height              |
| `--ribbon-group-height`             | CSS length                          | `4.0625rem` | Fixed command-group height              |

## States and variants

Use blue for current A3S workspaces. Green and orange remain available for legacy document-specific integrations, while the retained `purple` compatibility value resolves to A3S blue. Disabled tabs and commands use native `disabled`. The default 36-pixel tab strip and 74-pixel command panel remain compact; narrow viewports keep tabs unshrunk and scroll them horizontally.

### JavaScript API

Ribbon behavior comes from the [Tabs](/components/tabs) controller. `window.a3sUI.refresh(ribbon)` rescans dynamically added tabs. No Ribbon-specific JavaScript is required.

## Accessibility

Use the complete Tabs keyboard contract. Group commands with `<fieldset>` and a visible or screen-reader-only `<legend>`. If a ribbon becomes too dense, allow horizontal scrolling rather than shrinking labels below a readable size.

## React

```tsx
import { Ribbon, useRibbon } from "@a3s-lab/ui/react";

export function Example() {
  const control = useRibbon();
  return (
    <Ribbon ref={control.ref} className="tabs" data-accent="blue">
      <div role="tablist" aria-label="Editor commands">
        <button type="button" role="tab" aria-selected="true">
          Home
        </button>
      </div>
      <div role="tabpanel">
        <fieldset data-ribbon-group="">
          <legend>Clipboard</legend>
          <button type="button">Paste</button>
          <button type="button">Copy</button>
        </fieldset>
      </div>
    </Ribbon>
  );
}
```

`useRibbon` subscribes to manifest-declared DOM events and calls only public manifest methods. The adapter creates no second, framework-only state model.

## Vue

```vue
<script setup lang="ts">
import { Ribbon, useRibbon } from "@a3s-lab/ui/vue";

const control = useRibbon();
const componentRef = control.componentRef;
</script>

<template>
  <Ribbon ref="componentRef" class="tabs" data-accent="blue">
    <div role="tablist" aria-label="Editor commands">
      <button type="button" role="tab" aria-selected="true">Home</button>
    </div>
    <div role="tabpanel">
      <fieldset data-ribbon-group="">
        <legend>Clipboard</legend>
        <button type="button">Paste</button><button type="button">Copy</button>
      </fieldset>
    </div>
  </Ribbon>
</template>
```

`useRibbon` subscribes to manifest-declared DOM events and calls only public manifest methods. The adapter creates no second, framework-only state model.
